--- a/views/posts.html
+++ b/views/posts.html
@@ -22,26 +22,60 @@
 </form>
 <script src="/socket.io/socket.io.js"></script>
 <script>
-    const socket = io();
-
+    // const socket = io();
+    //
     var messages = document.getElementById('messages');
     var form = document.getElementById('form');
     var input = document.getElementById('input');
+    //
+    // form.addEventListener('submit', function(e) {
+    //     e.preventDefault();
+    //     if (input.value) {
+    //         socket.emit('chat message', input.value);
+    //         input.value = '';
+    //     }
+    // });
+    //
+    // socket.on('chat message', function(msg) {
+    //     var item = document.createElement('li');
+    //     item.textContent = msg;
+    //     messages.appendChild(item);
+    //     window.scrollTo(0, document.body.scrollHeight);
+    // });
 
-    form.addEventListener('submit', function(e) {
-        e.preventDefault();
-        if (input.value) {
-            socket.emit('chat message', input.value);
-            input.value = '';
+    var url = 'https://lingojiveapi.herokuapp.com';
+
+
+    var xhttp = new XMLHttpRequest();
+
+    xhttp.onreadystatechange = function() {
+        if (this.readyState == 4 && this.status == 200) {
+            // document.getElementById("ecShowTable").innerHTML = CreateTable(JSON.parse(this.responseText));
+            var item = document.createElement('li');
+            item.textContent = JSON.parse(this.responseText);
+            messages.appendChild(item);
+            window.scrollTo(0, document.body.scrollHeight);
         }
-    });
+    };
 
-    socket.on('chat message', function(msg) {
-        var item = document.createElement('li');
-        item.textContent = msg;
-        messages.appendChild(item);
-        window.scrollTo(0, document.body.scrollHeight);
-    });
+    xhttp.open("GET", url,
+        true);
+    xhttp.send();
+
+    // form.addEventListener('submit', function(e) {
+    //     e.preventDefault();
+    //     if (input.value) {
+    //         // socket.emit('chat message', input.value);
+    //         // input.value = '';
+    //         let post = new Post(req.body);
+    //         post.save((err) =>{
+    //             if(err)
+    //                 sendStatus(500);
+    //                 res.sendStatus(200);
+    //         })
+    //     }
+    // });
+
 </script>
 </body>
 </html>
