--- a/views/posts.html
+++ b/views/posts.html
@@ -43,17 +43,24 @@
     //     window.scrollTo(0, document.body.scrollHeight);
     // });
 
-    var url = 'https://lingojiveapi.herokuapp.com';
-
+    // var url = 'https://lingojiveapi.herokuapp.com/posts';
+    var url = 'http://localhost:5000/posts';
 
     var xhttp = new XMLHttpRequest();
 
     xhttp.onreadystatechange = function() {
         if (this.readyState == 4 && this.status == 200) {
             // document.getElementById("ecShowTable").innerHTML = CreateTable(JSON.parse(this.responseText));
-            var item = document.createElement('li');
-            item.textContent = JSON.parse(this.responseText);
-            messages.appendChild(item);
+            // var item = document.createElement('li');
+            console.log(this.responseText);
+            var response = JSON.parse(this.responseText)
+            for(let i = 0; i < response.length; ++i){
+                var item = document.createElement('li');
+                item.textContent = response[i].Body;
+                messages.appendChild(item);
+            }
+            // item.textContent = JSON.parse(this.responseText)[0].Body;
+            // messages.appendChild(item);
             window.scrollTo(0, document.body.scrollHeight);
         }
     };
