real-time posts work

--- a/views/posts.html
+++ b/views/posts.html
@@ -22,7 +22,7 @@
 </form>
 <script src="/socket.io/socket.io.js"></script>
 <script>
-    // const socket = io();
+    const socket = io();
     //
     var messages = document.getElementById('messages');
     var form = document.getElementById('form');
@@ -36,12 +36,7 @@
     //     }
     // });
     //
-    // socket.on('chat message', function(msg) {
-    //     var item = document.createElement('li');
-    //     item.textContent = msg;
-    //     messages.appendChild(item);
-    //     window.scrollTo(0, document.body.scrollHeight);
-    // });
+
 
     // var url = 'https://lingojiveapi.herokuapp.com/posts';
     var url = 'http://localhost:5000/posts';
@@ -69,6 +64,16 @@
         true);
     xhttp.send();
 
+    socket.on('chat message', function(msg) {
+        // var item = document.createElement('li');
+        // item.textContent = msg;
+        // messages.appendChild(item);
+        // window.scrollTo(0, document.body.scrollHeight);
+        xhttp.open("GET", url,
+            true);
+        xhttp.send();
+    });
+    
     form.addEventListener('submit', function(e) {
         e.preventDefault();
         if (input.value) {
@@ -83,12 +88,16 @@
             //         sendStatus(500);
             //         res.sendStatus(200);
             // })
+            socket.emit('chat message', input.value);
+
             xhttp.open("POST", url,
                 true);
             xhttp.setRequestHeader('Content-type', 'application/x-www-form-urlencoded');
             xhttp.send(params);
         }
     });
+
+
 
 </script>
 </body>
