--- a/views/posts.html
+++ b/views/posts.html
@@ -38,8 +38,8 @@
     //
 
 
-    // var url = 'https://lingojiveapi.herokuapp.com/posts';
-    var url = 'http://localhost:5000/posts';
+    var url = 'https://lingojiveapi.herokuapp.com/posts';
+    // var url = 'http://localhost:5000/posts';
 
     var xhttp = new XMLHttpRequest();
 
@@ -73,7 +73,7 @@
             true);
         xhttp.send();
     });
-    
+
     form.addEventListener('submit', function(e) {
         e.preventDefault();
         if (input.value) {
