fixed access to all pages and user.js

--- a/views/myprofile.html
+++ b/views/myprofile.html
@@ -17,15 +17,16 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-                <a class="nav-link" href="homepage.html">Home<span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="homepage">Home<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    Pages
+                    Actions
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="messenger.html">Messenger</a>
-                    <a class="dropdown-item" href="profile.html">Profile</a>
+                    <a class="dropdown-item" href="/messages">Messenger</a>
+                    <a class="dropdown-item" href="/myprofile">Profile</a>
+                    <a class="dropdown-item" href="/posts">Posts</a>
                 </div>
             </li>
         </ul>
