--- a/views/homepage.html
+++ b/views/homepage.html
@@ -24,6 +24,7 @@
                     Actions
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <a class="dropdown-item" href="/createprofile">Create a Profile</a>
                     <a class="dropdown-item" href="/messages">Messenger</a>
                     <a class="dropdown-item" href="/myprofile">Profile</a>
                     <a class="dropdown-item" href="/posts">Posts</a>
