--- a/views/posts.html
+++ b/views/posts.html
@@ -33,20 +33,11 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-                <a class="nav-link" href="homepage">Home<span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    Actions
-                </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="/createprofile">Create a Profile</a>
-                    <a class="dropdown-item" href="/messages">Messenger</a>
-                    <a class="dropdown-item" href="/myprofile">Profile</a>
-                    <a class="dropdown-item" href="/posts">Posts</a>
-                </div>
-            </li>
+            <li ><a class="nav-link" href="homepage">Home<span class="sr-only">(current)</span></a></li>
+            <li ><a class="nav-link" href="/createprofile">Create a Profile</a></li>
+            <li ><a class="nav-link" href="/messages">Messenger</a></li>
+            <li ><a class="nav-link" href="/myprofile">Profile</a></li>
+            <li ><a class="nav-link" href="/posts">Posts</a></li>
         </ul>
     </div>
 </nav>
