--- a/views/posts.html
+++ b/views/posts.html
@@ -27,17 +27,23 @@
 <body>
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">LingoJive</a>
+    <a class="navbar-brand" href="homepage">Lingojive<span class="sr-only">(current)</span></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
-            <li ><a class="nav-link" href="homepage">Home<span class="sr-only">(current)</span></a></li>
-            <li ><a class="nav-link" href="/createprofile">Create a Profile</a></li>
             <li ><a class="nav-link" href="/messages">Messenger</a></li>
-            <li ><a class="nav-link" href="/myprofile">Profile</a></li>
             <li ><a class="nav-link" href="/posts">Posts</a></li>
+
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Profile</a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <a class="dropdown-item" href="/createprofile">Create Profile</a>
+                    <a class="dropdown-item" href="/myprofile"> My Profile</a>
+                </div>
+            </li>
         </ul>
     </div>
 </nav>
