--- a/views/createprofile.html
+++ b/views/createprofile.html
@@ -26,9 +26,13 @@
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                     <a class="dropdown-item" href="/createprofile">Create a Profile</a>
                     <a class="dropdown-item" href="/messages">Messenger</a>
-                    <a class="dropdown-item" href="/myprofile">Profile</a>
                     <a class="dropdown-item" href="/posts">Posts</a>
                 </div>
+            </li>
+        </ul>
+        <ul class="navbar-nav ml-auto">
+            <li class="nav-item active">
+                <a class="nav-link" href="myprofile">Profile<span class="sr-only"(current)></span></a>
             </li>
         </ul>
     </div>
@@ -64,7 +68,9 @@
     <div class="jumbotron" id="output">
 
     </div>
-    <button class="btn btn-info btn-lg" id="btnAddProfile">Create Profile</button>
+    <div class="text-center">
+        <button class="btn btn-primary btn-lg" id="btnAddProfile">Create Profile</button>
+    </div>
 </div>
 <script>
     document.getElementById("btnAddProfile").addEventListener("click", (event) => {
@@ -72,7 +78,8 @@
         let xhttp = new XMLHttpRequest();
         xhttp.onreadystatechange = function () {
             if (this.readyState == 4 && this.status == 200) {
-                document.getElementById("output").innerHTML = "<pre>" + this.responseText + "</pre>" + "<pre>" + "Successfully created Profile!" + "</pre>";
+                document.getElementById("output").innerHTML = "<pre>" + this.responseText + "</pre>" +
+                    "<pre>" + "Successfully created Profile!" + "</pre>";
             } else {
                 document.getElementById("output").innerHTML = "<pre>" + "Error: Please fill in all fields and make sure passwords match." + "</pre>";
             }
