finished log-in logic, but needs to redirect to homepage. Also modified navbar slightly

--- a/views/login.html
+++ b/views/login.html
@@ -26,26 +26,30 @@
     </div>
     <div class="text-center">
         <button class="btn btn-primary btn-lg" id="btnLogin">Log in</button>
+        <button class="btn btn-danger btn-lg" id="btnForgotPassword">Forgot Password</button>
     </div>
 </div>
 <script>
+    // Works, but need to send to homepage now.
     document.getElementById("btnLogin").addEventListener("click", (event) =>{
         document.getElementById("output").innerHTML = "";
-        let url = "" + document.getElementById("username").value;
+        let url = "http://lingojiveapi.herokuapp.com/users/" + document.getElementById("username").value;
+        let typedPassword = document.getElementById("password").value;
         let xhttp = new XMLHttpRequest();
         xhttp.onreadystatechange = function(){
-            let response = JSON.stringify(this.responseText);
+            let response = JSON.parse(this.responseText);
             if (this.readyState == 4 && this.status == 200){
-                if (document.getElementById("password").value == response.password){
-                    document.getElementById("output").innerHTML = "<pre>" + "Successfully Logged In!" + "</pre>";
+                if (typedPassword == response.password){
+                    document.getElementById("output").innerHTML = "<pre>" + "Successfully Logged In! (redirect to homepage.html)" + "</pre>";
                 }
             } else {
-                document.getElementById("output").innerHTML = "<pre>" + "Please try again." + "</pre>";
+                document.getElementById("output").innerHTML = "<pre>" + "The information entered is incorrect. Please try again." + "</pre>";
             }
         };
         xhttp.open("GET", url, true);
         xhttp.send();
     });
+    // Could also add a "forgot password functionality
 </script>
 </body>
 </html>
