--- a/views/posts.html
+++ b/views/posts.html
@@ -26,28 +26,25 @@
 </head>
 <body>
 
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="homepage">Lingojive<span class="sr-only">(current)</span></a>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <a class="navbar-brand" href="#">LingoJive</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
-            <li ><a class="nav-link" href="/messages">Messenger</a></li>
-            <li ><a class="nav-link" href="/posts">Posts</a></li>
-
+            <li class="nav-item active">
+                <a class="nav-link" href="homepage">Home<span class="sr-only">(current)</span></a>
+            </li>
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Profile</a>
+                    Actions
+                </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-<<<<<<< HEAD
                     <a class="dropdown-item" href="/createprofile">Create a Profile</a>
-                    <a class="dropdown-item" href="/messages">Messenger</a>
+                    <a class="dropdown-item" href="/socket">Socket</a>
+                    <a class="dropdown-item" href="/messages">All Messages</a>
                     <a class="dropdown-item" href="/posts">Posts</a>
-=======
-                    <a class="dropdown-item" href="/createprofile">Create Profile</a>
-                    <a class="dropdown-item" href="/myprofile"> My Profile</a>
->>>>>>> 823466c9dbe2fb8e7eba8ba88a796f035138f112
                 </div>
             </li>
         </ul>
