--- a/views/myprofile.html
+++ b/views/myprofile.html
@@ -39,5 +39,6 @@
     </div>
 </nav>
 <h1 style="text-align: center">Profile Page</h1>
+<script src="javascripts/myprofile.js"></script>
 </body>
 </html>
