--- a/views/posts.html
+++ b/views/posts.html
@@ -62,6 +62,6 @@
     <input id="input" autocomplete="off" /><button>Send</button>
 </form>
 <script src="/socket.io/socket.io.js"></script>
-<script src="javascripts/post.js"></script>
+<script src="javascripts/posts.js"></script>
 </body>
 </html>
