--- a/views/messenger.html
+++ b/views/messenger.html
@@ -40,5 +40,6 @@
 </nav>
 <h1 style="text-align: center">Messenger site</h1>
 <h3 style="text-align: center">(going to put conversation page in here eventually)</h3>
+<script src="javascripts/messenger.js"></script>
 </body>
 </html>
