--- a/views/createprofile.html
+++ b/views/createprofile.html
@@ -58,12 +58,12 @@
     </div>
     <div class="form-group">
         <label for="password">Password:</label>
-        <input type="text" name="password" id="password" class="form-control"
+        <input type="password" name="password" id="password" class="form-control"
                placeholder="Password" required="true">
     </div>
     <div class="form-group">
         <label for="confirmpassword">Confirm Password:</label>
-        <input type="text" name="confirmpassword" id="confirmpassword" class="form-control"
+        <input type="password" name="confirmpassword" id="confirmpassword" class="form-control"
                placeholder="Password" required="true">
     </div>
     <div class="jumbotron" id="output">
