--- a/views/login.html
+++ b/views/login.html
@@ -19,7 +19,7 @@
     </div>
     <div class="form-group">
         <label for="password">Password:</label>
-        <input type="text" name="password" id="password" class="form-control"
+        <input type="password" name="password" id="password" class="form-control"
                placeholder="Password" required="true">
     </div>
     <div id="output">
