--- a/views/homepage.html
+++ b/views/homepage.html
@@ -41,7 +41,8 @@
         </ul>
     </div>
 </nav>
-<h1 style="text-align: center">LingoJive Homepage</h1>
-
+<h1 style="text-align: center; text-size: 31px; border-color: Blue">LingoJive Homepage</h1>
+<img src = "../Picture/multiplelanguages.jpeg" height = "300px" length = "300px" horizontal-align = "center" display = "block" alt = "Multiple langauges">
+<p align = "center" font-size="100px">Here you can chat, communicate, and have a good time<br> with your international friends for the first time!!!</p>
 </body>
 </html>
