added names to posts based on login info

--- a/views/homepage.html
+++ b/views/homepage.html
@@ -42,7 +42,9 @@
     </div>
 </nav>
 <h1 style="text-align: center; text-size: 31px; border-color: Blue">LingoJive Homepage</h1>
-<img src = "../Picture/multiplelanguages.jpeg" height = "300px" width = "2000px" align = "middle" alt = "Multiple langauges">
+<div style = "text-align: center">
+    <img src = "../Picture/multiplelanguages.jpeg" height = "300px" width = "500px" alt = "Multiple langauges">
+</div>
 <p align = "center" font-size="100px">Here you can chat, communicate, and have a good time<br> with your international friends for the first time!!!</p>
 </body>
 </html>
