--- a/views/posts.html
+++ b/views/posts.html
@@ -43,7 +43,7 @@
 <h1 style="text-align: center">Create Post</h1>
     <ul id="messages"></ul>
 <form id="form" action="">
-    <label for="input"> Comment: </label>
+    <label for="input" id="label1"> <%= name %> </label>
     <input id="input" autocomplete="off" /><button>Send</button>
 </form>
 <script src="/socket.io/socket.io.js"></script>
