Trying for sakes of search

--- a/views/searchprofile.html
+++ b/views/searchprofile.html
@@ -41,5 +41,25 @@
         </ul>
     </div>
 </nav>
+<div class="container">
+    <h4>Search Profile</h4>
+    <label style="padding-top: 10px" for="Name">Search by Name:</label>
+    <div class="input-group">
+        <input type="text" name="Name" id="Name" class="form-control"
+               placeholder="Name">
+        <button class="btn btn-success" id="btnLoadUsersByName">Search</button>
+    </div>
+    <label style="padding-top: 10px" for="Username">Search by Username:</label>
+    <div class="input-group">
+        <input type="text" name="Username" id="Username" class="form-control"
+               placeholder="Username">
+        <button class="btn btn-success" id="btnLoadUsersByUsername">Search</button>
+    </div>
+</div>
+<div style="padding-top: 10px" class="container">
+    <div class="jumbotron" id="output">
+
+    </div>
+</div>
 </body>
 </html>
