--- a/views/searchprofile.html
+++ b/views/searchprofile.html
@@ -43,9 +43,9 @@
 </nav>
 <div class="container">
     <h4>Search Profile</h4>
-    <label style="padding-top: 10px" for="Name">Search by Name:</label>
+    <label style="padding-top: 10px" for="firstname">Search by Name:</label>
     <div class="input-group">
-        <input type="text" name="Name" id="Name" class="form-control"
+        <input type="text" name="firstname" id="firstname" class="form-control"
                placeholder="Name">
         <button class="btn btn-success" id="btnLoadUsersByName">Search</button>
     </div>
@@ -61,5 +61,6 @@
 
     </div>
 </div>
+<script src="javascripts/searchprofile.js"></script>
 </body>
 </html>
