Update Navbar, integrate messenger, delete unnecessary page

--- a/views/createprofile.html
+++ b/views/createprofile.html
@@ -27,7 +27,7 @@
                     <a class="dropdown-item" href="/createprofile">Create a Profile</a>
                     <a class="dropdown-item" href="/searchprofile">Search Profile</a>
                     <a class="dropdown-item" href="/socket">Socket</a>
-                    <a class="dropdown-item" href="/messages">All Messages</a>
+                    <a class="dropdown-item" href="/messenger">Messenger (Demo)</a>
                     <a class="dropdown-item" href="/posts">Posts</a>
                 </div>
             </li>
