--- a/views/editprofile.html
+++ b/views/editprofile.html
@@ -25,15 +25,16 @@
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                     <a class="dropdown-item" href="/createprofile">Create a Profile</a>
+                    <a class="dropdown-item" href="/searchprofile">Search Profile</a>
                     <a class="dropdown-item" href="/socket">Socket</a>
-                    <a class="dropdown-item" href="/messages">All Messages</a>
+                    <a class="dropdown-item" href="/messenger">Messenger (Demo)</a>
                     <a class="dropdown-item" href="/posts">Posts</a>
                 </div>
             </li>
         </ul>
         <ul class="navbar-nav ml-auto">
             <li class="nav-item active">
-                <a class="nav-link" href="/myprofile">Profile<span class="sr-only"(current)></span></a>
+                <a class="nav-link" href="myprofile">Profile<span class="sr-only"(current)></span></a>
             </li>
         </ul>
     </div>
