--- a/views/homepage.html
+++ b/views/homepage.html
@@ -27,17 +27,17 @@
                     <a class="dropdown-item" href="/createprofile">Create a Profile</a>
                     <a class="dropdown-item" href="/searchprofile">Search Profile</a>
                     <a class="dropdown-item" href="/socket">Socket</a>
-                    <a class="dropdown-item" href="/messages">All Messages</a>
+                    <a class="dropdown-item" href="/messenger">Messenger (Demo)</a>
                     <a class="dropdown-item" href="/posts">Posts</a>
                 </div>
             </li>
         </ul>
         <ul class="navbar-nav ml-auto">
             <li class="nav-item active">
-                <a class="nav-link" href="/">Log-In<span class="sr-only"(current)></span></a>
+                <a class="nav-link" href="login">Log-In<span class="sr-only"(current)></span></a>
             </li>
             <li class="nav-item active">
-                <a class="nav-link" href="/myprofile">Profile<span class="sr-only"(current)></span></a>
+                <a class="nav-link" href="myprofile">Profile<span class="sr-only"(current)></span></a>
             </li>
         </ul>
     </div>
