--- a/views/socket.html
+++ b/views/socket.html
@@ -36,8 +36,9 @@
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                     <a class="dropdown-item" href="/createprofile">Create a Profile</a>
+                    <a class="dropdown-item" href="/searchprofile">Search Profile</a>
                     <a class="dropdown-item" href="/socket">Socket</a>
-                    <a class="dropdown-item" href="/messages">All Messages</a>
+                    <a class="dropdown-item" href="/messenger">Messenger (Demo)</a>
                     <a class="dropdown-item" href="/posts">Posts</a>
                 </div>
             </li>
