sessions implementation with authentication router

--- a/views/messenger.html
+++ b/views/messenger.html
@@ -68,7 +68,7 @@
             <button class="send_message">
                 Send
             </button>
-            <span id="username" style = "color: white"><%= username %></span>
+<!--            <span id="username" style = "color: white"><%= username %></span>-->
         </form>
     </div>
 <!--</div>-->
