--- a/views/login.html
+++ b/views/login.html
@@ -11,6 +11,33 @@
 </head>
 <body>
 <h1 style="text-align: center">LingoJive Log-in</h1>
+
+<!--<div class="container">-->
+<!--    <div class="form-group">-->
+<!--        <label for="username">Username:</label>-->
+<!--        <input type="text" name="username" id="username" class="form-control"-->
+<!--               placeholder="Username" required="true">-->
+<!--    </div>-->
+<!--    <div class="form-group">-->
+<!--        <label for="password">Password:</label>-->
+<!--        <input type="password" name="password" id="password" class="form-control"-->
+<!--               placeholder="Password" required="true">-->
+<!--    </div>-->
+<!--    <div id="output">-->
+
+<!--    </div>-->
+<!--    <div class="text-center">-->
+<!--        <button class="btn btn-primary btn-lg" id="btnLogin">Log in</button>-->
+<!--        <br>-->
+<!--        <a href="/createprofile">Create an account</a>-->
+<!--    </div>-->
+<!--&lt;!&ndash;    <form method="get" action="/login">&ndash;&gt;-->
+<!--&lt;!&ndash;    <form method="get" action="/homepage">&ndash;&gt;-->
+<!--&lt;!&ndash;        <button type="submit">Log In</button>&ndash;&gt;-->
+<!--</div>-->
+<!--</form>-->
+
+<form action="/authenticate" method="post">
 <div class="container">
     <div class="form-group">
         <label for="username">Username:</label>
@@ -26,14 +53,16 @@
 
     </div>
     <div class="text-center">
-        <button class="btn btn-primary btn-lg" id="btnLogin">Log in</button>
+        <button type="submit" class="btn btn-primary btn-lg" id="btnLogin">Log in</button>
         <br>
         <a href="/createprofile">Create an account</a>
     </div>
-    <form method="get" action="/login">
-        <button type="submit">Log In</button>
-    </form>
+    <!--    <form method="get" action="/login">-->
+    <!--    <form method="get" action="/homepage">-->
+    <!--        <button type="submit">Log In</button>-->
 </div>
+</form>
+
 <script src="javascripts/login.js"></script>
 </body>
 </html>
