passing params into homepage

--- a/views/homepage.html
+++ b/views/homepage.html
@@ -42,6 +42,7 @@
         </ul>
     </div>
 </nav>
+<h1><%= username %></h1>
 <h1 style="text-align: center; text-size: 31px; border-color: Blue">LingoJive Homepage</h1>
 <div style = "text-align: center">
     <img src = "../Picture/multiplelanguages.jpeg" height = "300px" width = "500px" alt = "Multiple langauges">
