--- a/views/messenger.html
+++ b/views/messenger.html
@@ -44,7 +44,7 @@
 <!--<h1 style="text-align: center">Messenger site</h1>-->
 <!--<h3 style="text-align: center">(going to put conversation page in here eventually)</h3>-->
 
-<!--<span id="username"><%= username %></span>-->
+<span id="username"><%= username %></span>
 
 <!--<div class="chat_window">-->
 <!--    <div class="top_menu">-->
