--- a/views/editprofile.html
+++ b/views/editprofile.html
@@ -28,6 +28,7 @@
                     <a class="dropdown-item" href="/searchprofile">Search Profile</a>
                     <a class="dropdown-item" href="/socket">Socket</a>
                     <a class="dropdown-item" href="/messenger">Messenger (Demo)</a>
+                    <a class="dropdown-item" href="/chats">DM Chats</a>
                     <a class="dropdown-item" href="/posts">Posts</a>
                 </div>
             </li>
