Update editprofile with param

--- a/views/editprofile.html
+++ b/views/editprofile.html
@@ -42,16 +42,7 @@
 </nav>
 <h1 style="text-align: center">Edit Profile</h1>
 <div class="container">
-    <h5>Enter the username.</h5>
-    <label for="username">Username</label>
-    <div class="form-group input-group">
-        <input type="text" name="username" id="username" class="form-control"
-               placeholder="username">
-        <button class="btn btn-success" id="btnFindUser">Search</button>
-    </div>
-    <div class="jumbotron" id="output1">
-
-    </div>
+    <h3 style="text-align: center" id="username"><%= username %></h3>
 </div>
 <div class="container">
     <h5>Fill in new info:</h5>
