working on implementing dms: currently buggy

--- a/views/directmessage.html
+++ b/views/directmessage.html
@@ -40,7 +40,7 @@
         </ul>
     </div>
 </nav>
-<span id="username"><%= username %></span>
+<span id="chatID"><%= ChatID %></span>
 <ul id="chatList"></ul>
-<script src="javascripts/chats.js"></script>
+<script src="../javascripts/directmessage.js"></script>
 </body>
