show messages in a chat

--- a/views/directmessage.html
+++ b/views/directmessage.html
@@ -41,6 +41,7 @@
     </div>
 </nav>
 <span id="chatID"><%= ChatID %></span>
-<ul id="chatList"></ul>
+<!--<ul id="chatList"></ul>-->
+<ul id="messages"></ul>
 <script src="../javascripts/directmessage.js"></script>
 </body>
