--- a/views/chats.html
+++ b/views/chats.html
@@ -42,5 +42,6 @@
 </nav>
 <span id="username"><%= username %></span>
 <ul id="chatList"></ul>
+<ul id="messages"></ul>
 <script src="javascripts/chats.js"></script>
 </body>
