Profile page start(:
added generic user icon, placeholder for username, edit profile link button, and bio text box + integrated new nav bar

--- a/views/homepage.html
+++ b/views/homepage.html
@@ -36,7 +36,7 @@
                     Account
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="/myprofile">View profile</a>
+                    <a class="dropdown-item" href="/myprofile">View Profile</a>
                     <a class="dropdown-item" href="/editprofile">Edit Profile</a>
                     <a class="dropdown-item" href="#">Settings & Privacy</a>
                     <a class="dropdown-item" href="#">Support</a>
