Trying to show bio in myprofile

--- a/views/myprofile.html
+++ b/views/myprofile.html
@@ -59,6 +59,7 @@
 <div style="...; border:10px solid green; align: 'center'; height: 150px;margin: 0 100px;">
         <div class = "bio">
             <h3>Biography</h3>
+            <p><%=bio%></p>
         </div>
 </div>
 
