attempting posting new chats, i.e. starting a new chat by composing to an intended recipient. Quite a lot of work to do.

--- a/views/chats.html
+++ b/views/chats.html
@@ -48,6 +48,12 @@
     <input type="text" id="chatMsg">
     <input type="submit" value="Submit">
 </form>
+<form method="post" id="form2">
+    <label for="recipient" id="chatName">Compose: </label>
+    <input type="text" id="recipient" placeholder="recipient">
+    <input type="text" id="composeMsg" placeholder="chat name">
+    <input type="submit" value="Submit">
+</form>
 <script src="/socket.io/socket.io.js"></script>
 <script src="https://code.jquery.com/jquery-1.11.1.min.js"></script>
 <script src="https://cdn.jsdelivr.net/gh/rexeze/formatTimeStamp/src/index-cdn.js"></script>
