--- a/views/chats.html
+++ b/views/chats.html
@@ -47,24 +47,33 @@
     <div class="row chatrow">
         <div class="col-6 chatcol">
             <ul id="chatList" class="listgroup"></ul>
+            <form method="post" id="form2">
+                <label for="recipient" id="chatName">Compose: </label>
+                <input type="text" id="recipient" placeholder="recipient">
+                <!--    <input type="text" id="composeMsg" placeholder="chat name">-->
+<!--                <input type="submit" value="Submit">-->
+                <input class="btn btn-primary" type="submit" value="Submit">
+            </form>
         </div>
-        <div class="col-6 chatcol">
-            <ul id="messages" class="listgroup"></ul>
+        <div class="col-6 chatcol2">
+            <div class="col-12 chatcol3">
+                <ul id="messages" class="listgroup"></ul>
+            </div>
             <form method="post" id="form">
-                <label for="chatMsg" id="username"><%= username %></label>
-                <input type="text" id="chatMsg">
-                <input type="submit" value="Submit">
+                <div class="input-group">
+                    <label for="chatMsg" id="username"><%= username %></label>
+                    <input type="text" id="chatMsg" class="form-control">
+                    <!--                <input type="submit" value="Submit">-->
+                    <div class="input-group-append">
+                        <input class="btn btn-primary" type="submit" value="Submit">
+                    </div>
+                </div>
             </form>
         </div>
     </div>
 </div>
 
-<form method="post" id="form2">
-    <label for="recipient" id="chatName">Compose: </label>
-    <input type="text" id="recipient" placeholder="recipient">
-<!--    <input type="text" id="composeMsg" placeholder="chat name">-->
-    <input type="submit" value="Submit">
-</form>
+
 <script src="/socket.io/socket.io.js"></script>
 <script src="https://code.jquery.com/jquery-1.11.1.min.js"></script>
 <script src="https://cdn.jsdelivr.net/gh/rexeze/formatTimeStamp/src/index-cdn.js"></script>
