Expanding profile further, experimenting with bio in myprofile

--- a/views/myprofile.html
+++ b/views/myprofile.html
@@ -51,7 +51,7 @@
 <div style = "text-align: center">
     <img src = "../Picture/profilephoto.png" height = "200px" width = "200px" alt = "Profile Photo">
 </div>
-<h4 style="text-align: center; text-size: 31px; border-color: Blue"><%= username %></h4>
+<h4 id="head_username" style="text-align: center; text-size: 31px; border-color: Blue"><%= username %></h4>
 <script src="javascripts/myprofile.js"></script>
 <div style="text-align: center;">
 <button onclick="window.location.href='/editprofile';"> Edit Profile </button></div>
@@ -59,7 +59,7 @@
 <div style="...; border:10px solid green; align: 'center'; height: 150px;margin: 0 100px;">
         <div class = "bio">
             <h3>Biography</h3>
-            <p><%=bio%></p>
+            <p></p>
         </div>
 </div>
 
