minor fixes to chats.js

--- a/public/stylesheets/chats.css
+++ b/public/stylesheets/chats.css
@@ -34,3 +34,9 @@
     position: absolute;
     bottom: 0;
 }
+
+.activeChat{
+    color: #fff;
+    background-color: #007bff;
+    border-color: #007bff;
+}
