--- a/views/chats.html
+++ b/views/chats.html
@@ -55,8 +55,8 @@
                 <input class="btn btn-primary" type="submit" value="Submit">
             </form>
         </div>
-        <div class="col-6 chatcol2">
-            <div class="col-12 chatcol3">
+        <div class="col-6 chatcol2" >
+            <div class="col-12 chatcol3" id="messageScroll">
                 <ul id="messages" class="listgroup"></ul>
             </div>
             <form method="post" id="form">
