--- a/views/editprofile.html
+++ b/views/editprofile.html
@@ -72,7 +72,7 @@
                placeholder="Enter your biography...">
     </div>
     <div class="form-group">
-        <label for="langexp">Native Languages</label>
+        <label>Native Languages</label>
         <div class="dropdown bootstrap-select show-tick fit-width dropup">
             <select class="selectpicker" multiple title="Choose one of the following...">
                 <option>English</option>
@@ -82,7 +82,7 @@
         </div>
     </div>
     <div class="form-group">
-        <label for="langlearn">Practicing Languages</label>
+        <label>Practicing Languages</label>
         <div class="dropdown bootstrap-select show-tick fit-width dropup">
             <select class="selectpicker" multiple title="Choose one of the following...">
                 <option>English</option>
