Upload LingoJive logo

--- a/views/homepage.html
+++ b/views/homepage.html
@@ -50,7 +50,7 @@
 <h1 style="text-align: center; text-size: 31px; border-color: Blue"><%= username %></h1>
 <h1 style="text-align: center; text-size: 31px; border-color: Blue">LingoJive Homepage</h1>
 <div style = "text-align: center">
-    <img src = "../Picture/multiplelanguages.jpeg" height = "300px" width = "500px" alt = "Multiple langauges">
+    <img src = "../Picture/LingoJiveLogo.png" height = "300px" width = "300px">
 </div>
 
 <p align = "center" font-size="100px">Here you can chat, communicate, and have a good time<br> with your international friends for the first time!!!</p>
