bio props to edit profile view

--- a/views/myprofile.html
+++ b/views/myprofile.html
@@ -60,6 +60,7 @@
 <div style="...; border:10px solid green; align: 'center'; height: 150px;margin: 0 100px;">
         <div class = "bio">
             <h3>Biography</h3>
+            <p><%= bio %></p>
         </div>
 </div>
 <div style="...; border:10px solid green; align: 'center'; float: left; height: 150px;width: 300px;margin: 20px 100px;">
