Front and back ends for languages

--- a/views/myprofile.html
+++ b/views/myprofile.html
@@ -52,6 +52,7 @@
 <div style = "text-align: center">
     <img src = "../Picture/profilephoto.png" height = "200px" width = "200px" alt = "Profile Photo">
 </div>
+<h3 id="fullname" style="text-align: center"><%=firstname%> <%=lastname%></h3>
 <h4 id="head_username" style="text-align: center; text-size: 31px; border-color: Blue"><%= username %></h4>
 <script src="javascripts/myprofile.js"></script>
 <div style="text-align: center;">
