--- a/views/editprofile.html
+++ b/views/editprofile.html
@@ -65,7 +65,7 @@
     <h3 style="text-align: center" id="username"><%= username %></h3>
 </div>
 <div class="container">
-    <h5>Fill in new info:</h5>
+    <h5>Fill in new info (blank elements have no effect):</h5>
     <div class="form-group">
         <label for="firstname">First Name:</label>
         <input type="text" name="firstname" id="firstname" class="form-control"
