Added block/addfriend button

--- a/views/otherprofile.html
+++ b/views/otherprofile.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<body lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Profile</title>
@@ -45,7 +45,6 @@
         </ul>
     </div>
 </nav>
-<body>
 <div style = "text-align: center">
     <img src = "../Picture/profilephoto.png" height = "200px" width = "200px" alt = "Profile Photo">
 </div>
@@ -53,20 +52,25 @@
 <h4 id="head_username" style="text-align: center; text-size: 31px; border-color: Blue"></h4>
 <script src="javascripts/otherprofile.js"></script>
 <div style="text-align: center;">
-<div style="...; border:5px solid black; align: 'center'; height: 150px;margin: 0 100px;">
-    <div class = "bio">
-        <h3>Biography</h3>
-        <p></p>
+    <div>
+        <button class="btn-danger" id="btnBlockUser">Block</button>
+        <button class="btn-success" id="btnAddFriend">Add Friend</button>
     </div>
-</div>
-<div style="...; border:5px solid black; align: 'center'; float: left; height: 150px;width: 500px;margin: 20px 100px;">
-    <div class = "boxOne">
-        <h4>Languages Spoken</h4>
+    <div style="...; border:5px solid black; align: 'center'; height: 150px;margin: 0 100px;">
+        <div class = "bio">
+            <h3>Biography</h3>
+            <p></p>
+        </div>
     </div>
-</div>
-<div style="...; border:5px solid black; align: 'center'; float: right; height: 150px;width: 500px;margin: 20px 100px;">
-    <div class = "boxTwo">
-        <h4>Languages to be Learned</h4>
+    <div style="...; border:5px solid black; align: 'center'; float: left; height: 150px;width: 500px;margin: 20px 100px;">
+        <div class = "boxOne">
+            <h4>Languages Spoken</h4>
+        </div>
+    </div>
+    <div style="...; border:5px solid black; align: 'center'; float: right; height: 150px;width: 500px;margin: 20px 100px;">
+        <div class = "boxTwo">
+            <h4>Languages to be Learned</h4>
+        </div>
     </div>
 </div>
 </body>
