changing navbar for easier navigation

--- a/views/chats.html
+++ b/views/chats.html
@@ -15,24 +15,33 @@
     const roomId = '<%= roomId %>';
 </script>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="#">LingoJive</a>
+    <a class="navbar-brand" href="/">LingoJive</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    Actions
-                </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="/createprofile">Create a Profile</a>
-                    <a class="dropdown-item" href="/searchprofile">Search Profile</a>
-                    <a class="dropdown-item" href="/socket">Socket</a>
-                    <a class="dropdown-item" href="/messenger">Messenger (Demo)</a>
-                    <a class="dropdown-item" href="/chats">DM Chats</a>
-                    <a class="dropdown-item" href="/posts">Posts</a>
-                </div>
+<!--            <li class="nav-item dropdown">-->
+<!--                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">-->
+<!--                    Actions-->
+<!--                </a>-->
+<!--                <div class="dropdown-menu" aria-labelledby="navbarDropdown">-->
+<!--                    <a class="dropdown-item" href="/createprofile">Create a Profile</a>-->
+<!--                    <a class="dropdown-item" href="/searchprofile">Search Profile</a>-->
+<!--                    <a class="dropdown-item" href="/socket">Socket</a>-->
+<!--                    <a class="dropdown-item" href="/messenger">Messenger (Demo)</a>-->
+<!--                    <a class="dropdown-item" href="/chats">DM Chats</a>-->
+<!--                    <a class="dropdown-item" href="/posts">Posts</a>-->
+<!--                </div>-->
+<!--            </li>-->
+            <li class="nav-item">
+                <a class="nav-link" href="/searchprofile">Users</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/chats">Messages</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/posts">Forum</a>
             </li>
         </ul>
         <ul class="navbar-nav ml-auto">
